Make endpoint private

--- a/serverless.yml
+++ b/serverless.yml
@@ -17,6 +17,7 @@ functions:
           path: parse
           method: post
           integration: lambda
+          private: true
           request:
             template:
               application/json: >
